--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nonebot",
   "version": "0.0.1",
-  "description": "The bot that's fun, awesome, and made by a lazy person",
+  "description": "The awesome bot made by a lazy person",
   "main": "bot.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/FriendsNone/NoneBot.git"
   },
-  "author": "FriendsNone",
+  "author": "Wizzardo Meowy (FriendsNone)",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/FriendsNone/NoneBot/issues"
@@ -19,7 +19,6 @@
   "dependencies": {
     "discord.js": "^11.1.0",
     "node-opus": "^0.2.6",
-    "ytdl-core": "^0.14.0",
-    "ytdl-getinfo": "^1.0.3"
+    "ytdl-core": "^0.14.1"
   }
 }
