--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "discord.js": "^11.1.0",
     "opusscript": "0.0.3",
+    "request": "^2.81.0",
     "ytdl-core": "^0.14.1"
   }
 }
