Updates to the off command

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "bot_token",
-    "prefix": "bot_prefix",
-    "version": "RW-3"
+    "token": "",
+    "prefix": "",
+    "version": "MK3"
 }
