--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "functionkey-bot",
-  "version": "4.0.0",
-  "description": "A WIP fun Discord bot made by a lazy person.",
+  "version": "4.1.0",
+  "description": "The merry joyful Discord bot! Made by a lazy person.",
   "main": "bot.js",
   "scripts": {
     "start": "node ."
@@ -18,19 +18,28 @@
   "homepage": "https://github.com/FriendsNone/FunctionKey-Bot#readme",
   "dependencies": {
     "chalk": "^2.1.0",
-    "common-tags": "^1.4.0",
+    "common-tags": "^1.5.1",
     "cowsay": "^1.2.1",
     "discord.js": "github:hydrabolt/discord.js",
     "discord.js-commando": "github:friendsnone/discord.js-commando",
     "fortune-teller": "^0.1.2",
+    "kaori": "^1.1.4",
     "mathjs": "^3.16.4",
     "moment": "^2.19.1",
     "moment-duration-format": "^1.3.0",
     "moment-timezone": "^0.5.14",
     "opusscript": "0.0.4",
     "request": "^2.83.0",
-    "wtf_wikipedia": "^2.1.0",
-    "youtube-dl": "1.11.1",
-    "ytdl-core": "^0.18.1"
+    "simple-youtube-api": "^5.0.0",
+    "wtf_wikipedia": "^2.4.2",
+    "ytdl-core": "^0.18.3"
+  },
+  "devDependencies": {
+    "eslint": "^4.12.1",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-standard": "^3.0.1"
   }
 }
